# CRC-Profile-Editor

./: Cargo.toml  nct_1.json  zoa_1.json
src/: crc_serde.rs  main.rs
src/crc/: artcc.rs  mod.rs  profile.rs
