[package]
name = "crc-profile-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.209", features = ["derive"]}
serde_json = "1.0.127"
serde_path_to_error = "0.1.16"
dirs = "5.0.1"
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.86"
